# DSPEditor

./: .gitignore  Aquisition.py  CMakeLists.txt  CWSope.py  ImGuiShapes.cpp  LICENSE  MLAttack.py  Makefile  README.md  Trace.py  TraceGroup.py  abstruct_nodes.h  application.cpp  application.h  cforge.toml  common.h  crude_json.h  datatype_nodes.h  imgui.ini  imgui_canvas.h  imgui_extra_math.h  imgui_node_editor.cpp  imgui_node_editor.h  imgui_node_editor_internal.h  logger.cpp  logger.h  main.cpp  math_nodes.h  node.cpp  node.h  node_editor.cpp  node_editor.h  node_link.cpp  node_link.h  node_matrix.h  node_pin.cpp  node_pin.h  plot_widget.cpp  plot_widget.h  w_framerate.cpp  (+5 more)
.github/workflows/: c-cpp.yml
include/DSPEditor/: example.hpp
include/final_try/: example.hpp
src/: example.cpp  main.cpp
